2006-04-07  Adam Jackson  <ajax@freedesktop.org>

	* configure.ac:
	* src/via.h:
	* src/via_accel.c:
	* src/via_dri.c:
	* src/via_driver.h:
	* src/via_memcpy.c:
	* src/via_memory.c:
	* src/via_mode.c:
	* src/via_shadow.c:
	* src/via_swov.c:
	* src/via_vbe.c:
	* src/via_vgahw.c:
	* src/via_video.c:
	* src/via_xvmc.c:
	Unlibcwrap.  Bump server version requirement.  Bump to 0.2.0.

2006-03-19  Thomas Hellstrom  <thomas-at-tungstengraphics.com>

	* src/via_accel.c: (viaAccelPlaneMaskHelper),
	(viaSetupForSolidLine), (viaSubsequentSolidTwoPointLine),
	(viaSetupForDashedLine), (viaPixelARGB8888),
	(viaExaDownloadFromScreen), (viaExaTexUploadToScreen),
	(viaExaUploadToScreen), (viaExaCheckComposite),
	(viaExaPrepareComposite), (viaInitExa), (viaInitAccel),
	(viaExitAccel), (viaFinishInitAccel):
	* src/via_driver.h:
	Fix for XAA solid lines broken by the EXA merge.
	(Openchrome Chgset 170).
	Indent.
	
2006-03-17  Thomas Hellstrom  <thomas-at-tungstengraphics.com>

	* src/via_driver.c:
	Bugzilla #6291 <https://bugs.freedesktop.org/show_bug.cgi?id=6291>
	s/XF86_VERSION_CURRENT/XORG_VERSION_CURRENT/
	(Reported by Eric Anholt)
	
2006-03-17  Thomas Hellstrom  <thomas-at-tungstengraphics.com>

	* src/via_accel.c: (viaInitExa):
	* src/via_driver.c: (VIAPreInit):
	Fix via EXA after API update.

2006-03-08  Thomas Hellstrom  <thomas-at-tungstengraphics.com>

	* src/via_id.c:
	Update PCI-ids from lists maintained at unichrome.sf.net by 
	Luc Verhaegen and openchrome.org by Xavier Bachelot.
	
2006-03-08  Thomas Hellstrom  <thomas-at-tungstengraphics.com>

	* src/via_swov.c: 
	* src/via_swov.h:
	* src/via_video.c: 
	* src/via_video.h:
	* src/via_xvmc.c: 
	* src/via_xvmc.h:
	* src/via_xvpriv.h:
	Indent above files after syncing them with openChrome.
	
2006-03-08  Thomas Hellstrom  <thomas-at-tungstengraphics.com>

	* man/via.man:
	* src/via.h:
	* src/via_accel.c: (viaExaDownloadFromScreen),
	(viaExaUploadToScreen):
	* src/via_driver.c: (VIAPreInit):
	* src/via_driver.h: