@@ -121,7 +121,7 @@ static int viaXvMCInterceptXvAttribute(ScrnInfoPtr pScrn, Atom attribute,
     INT32 value, pointer data);
 static int viaXvMCInterceptPutImage(ScrnInfoPtr, short, short, short, short,
     short, short, short, short, int, unsigned char *, short, short, Bool,
-    RegionPtr, pointer);
+    RegionPtr, pointer, DrawablePtr);
 static int viaXvMCInterceptXvGetAttribute(ScrnInfoPtr pScrn, Atom attribute,
     INT32 * value, pointer data);
 /*
@@ -939,7 +939,8 @@ viaXvMCInterceptPutImage(ScrnInfoPtr pScrn, short src_x, short src_y,
     short drw_x, short drw_y, short src_w,
     short src_h, short drw_w, short drw_h,
     int id, unsigned char *buf, short width,
-    short height, Bool sync, RegionPtr clipBoxes, pointer data)
+    short height, Bool sync, RegionPtr clipBoxes, pointer data,
+    DrawablePtr pDraw)
 {
     viaPortPrivPtr pPriv = (viaPortPrivPtr) data;
     ViaXvMCXVPriv *vx = (ViaXvMCXVPriv *) pPriv->xvmc_priv;
@@ -996,7 +997,7 @@ viaXvMCInterceptPutImage(ScrnInfoPtr pScrn, short src_x, short src_y,
 	}
     }
     return vx->PutImage(pScrn, src_x, src_y, drw_x, drw_y, src_w, src_h,
-	drw_w, drw_h, id, buf, width, height, sync, clipBoxes, data);
+	drw_w, drw_h, id, buf, width, height, sync, clipBoxes, data, pDraw);
 }
 
 unsigned long
