@@ -1,3 +1,10 @@
+2006-04-07  Aaron Plattner  <aplattner@nvidia.com>
+
+	* src/via_video.c: (viaReputImage), (viaPutImage):
+	* src/via_xvmc.c: (viaXvMCInterceptPutImage):
+	Add a DrawablePtr argument to the XV functions to pave the way for
+	redirected video.
+
 2006-04-07  Adam Jackson  <ajax@freedesktop.org>
 
 	* configure.ac:
